--- a/Core_Proje/Views/AdminMessage/SenderMessageDetails.cshtml
+++ b/Core_Proje/Views/AdminMessage/SenderMessageDetails.cshtml
@@ -15,7 +15,7 @@
 
             .table td {
                 overflow: hidden;
-                white-space: pre-wrap;
+                white-space: normal;
                 word-wrap: break-word;
                 color: white;
             }
@@ -23,10 +23,7 @@
         table, th, td {
             border: 2px solid antiquewhite;
         }
-        td{
-          width: 1405px;
-           height: 46px !important;
-        }
+        
     </style>
 </head>
 
@@ -43,11 +40,11 @@
                                 <div style="display: flex; align-items: center;">                     
                                 @if (Model.ImageUrl == null)
                                 {
-                                    <img src="/userimage/default.png" alt="image" class="rounded-circle profile-pic">
+                                    <img src="/userimage/default.png" style="width:40px; height:40px;" alt="image" class="rounded-circle profile-pic">
                                 }
                                 else
                                 {
-                                    <img src="/userimage/@Model.ImageUrl" alt="image" class="rounded-circle profile-pic">
+                                    <img src="/userimage/@Model.ImageUrl" style="width:40px; height:40px;" alt="image" class="rounded-circle profile-pic">
                                 }
                          
                             
