--- a/Core_Proje/Views/Portfolio/EditPortfolio.cshtml
+++ b/Core_Proje/Views/Portfolio/EditPortfolio.cshtml
@@ -27,48 +27,62 @@
 
 
                     @Html.HiddenFor(model => model.PortfolioId)
-                    <div class="form-group">
-                        <label for="exampleInputName1">Proje</label>
-                        <input type="text" name="Name" class="form-control" value="@Model.Name" />
-                        @Html.ValidationMessageFor(x => x.Name, null, new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword4">Platform</label>
-                        <select typeof="text" class="form-control" name="Platform" asp-for="Platform">
+                    <div class="row">
+                        <div class="col-md-9">
+                            <div class="form-group">
+                                <label for="exampleInputName1">Proje</label>
+                                <input type="text" name="Name" class="form-control" value="@Model.Name" />
+                                @Html.ValidationMessageFor(x => x.Name, null, new { @class = "text-danger" })
+                            </div>
+                                <div class="form-group">
+                                    <label for="exampleInputPassword4">Platform</label>
+                                    <select typeof="text" class="form-control" name="Platform" asp-for="Platform">
+                                        <option value="/argon-dashboard-master/assets/img/theme/c-sharp.svg">C#</option>
+                                        <option value="/argon-dashboard-master/assets/img/theme/windowsForm.png">Windows Form</option>
+                                        <option value="/argon-dashboard-master/assets/img/theme/angular.jpg">Angular</option>
+                                        <option value="/argon-dashboard-master/assets/img/theme/bootstrap.jpg">Bootstrap</option>
+                                        <option value="/argon-dashboard-master/assets/img/theme/react.jpg">React</option>
+                                        <option value="/argon-dashboard-master/assets/img/theme/Html5.png">Html5</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="formFile" class="form-label">Ana sitedeki tanıtım kartında görünecek resim</label>
+                                    <input class="form-control" type="file" id="formFile1" name="Picture">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="formFile" class="form-label">Ana sitedeki büyük resim</label>
+                                    <input class="form-control" type="file" id="formFile2" name="Picture2">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail3">Proje Linki</label>
+                                    <input type="text" name="ProjectUrl" class="form-control" value="@Model.ProjectUrl">
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail3">Ücret</label>
+                                    <input type="text" name="Price" class="form-control" value="@Model.Price">
+                                    @Html.ValidationMessageFor(x => x.Price, null, new { @class = "text-danger" })
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail3">İlerleme (%)</label>
+                                    <input type="text" name="Value" class="form-control" value="@Model.Value">
 
-                            <option value="/argon-dashboard-master/assets/img/theme/c-sharp.svg">C#</option>
-                            <option value="/argon-dashboard-master/assets/img/theme/windowsForm.png">Windows Form</option>
-                            <option value="/argon-dashboard-master/assets/img/theme/angular.jpg">Angular</option>
-                            <option value="/argon-dashboard-master/assets/img/theme/bootstrap.jpg">Bootstrap</option>
-                            <option value="/argon-dashboard-master/assets/img/theme/react.jpg">React</option>
-                            <option value="/argon-dashboard-master/assets/img/theme/Html5.png">Html5</option>
-                        </select>
+                                    @Html.ValidationMessageFor(x => x.Value, null, new { @class = "text-danger" })
+                                </div>
+                       
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="ProfilePicture">Tanıtım Kartı Önizleme </label>
+                                <br />
+                                <img src="/projectimage/@Model.ImageUrl" id="ProfilePicture" alt="Profil Resmi" class="form-control" style="width:100%; height:240px;">
+                            </div>
+                            <div class="form-group">
+                                <label for="ProfilePicture">Büyük Resim Önizleme</label>
+                                <br />
+                                <img src="/projectimage/@Model.ImageUrl2" id="ProfilePicture" alt="Profil Resmi" class="form-control" style="width:100%; height:240px;">
+                            </div>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="formFile" class="form-label">Ana sitedeki tanıtım kartında görünecek resim</label>
-                        <input class="form-control" type="file" id="formFile1" name="Picture" >
-                    </div>
-                    <div class="mb-3">
-                        <label for="formFile" class="form-label">Ana sitedeki büyük resim</label>
-                        <input class="form-control" type="file" id="formFile2" name="Picture2">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail3">Proje Linki</label>
-                        <input type="text" name="ProjectUrl" class="form-control" value="@Model.ProjectUrl">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail3">Ücret</label>
-                        <input type="text" name="Price" class="form-control" value="@Model.Price">
-                        @Html.ValidationMessageFor(x => x.Price, null, new { @class = "text-danger" })
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputEmail3">İlerleme (%)</label>
-                        <input type="text" name="Value" class="form-control" value="@Model.Value">
-
-                        @Html.ValidationMessageFor(x => x.Value, null, new { @class = "text-danger" })
-                    </div>
-
-
                     <button type="submit" class="btn btn-success">Kaydet</button>
                     <a href="/Portfolio" class="btn btn-youtube">İptal</a>
                 </form>
