--- a/Core_Proje/Views/Skill/EditSkill.cshtml
+++ b/Core_Proje/Views/Skill/EditSkill.cshtml
@@ -20,7 +20,7 @@
                     <input type="text" name="Title" class="form-control" value="@Model.Title" />
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail3">Tarih</label>
+                    <label for="exampleInputEmail3">İlerleme (%)</label>
                     <input type="text" name="Value" class="form-control" value="@Model.Value">
                 </div>
                 
