bazi sayfalardaki input yapilari texarea ya çevrildi bir kac edit sayfasi revize edildi

--- a/Core_Proje/Views/Testimonial/EditTestimonial.cshtml
+++ b/Core_Proje/Views/Testimonial/EditTestimonial.cshtml
@@ -31,14 +31,14 @@
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputEmail3">Yorum</label>
-                                <textarea name="Comment" class="form-control">@Model.Comment</textarea>
+                                <textarea name="Comment" class="form-control" style="height: 90px;">@Model.Comment</textarea>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="ProfilePicture">Resim Önizleme</label>
                                 <br />
-                                <img src="/testimonialimage/@Model.ImageUrl" id="ProfilePicture" alt="Profil Resmi" class="form-control" style="width:100%; height:292px;">
+                                <img src="/testimonialimage/@Model.ImageUrl" id="ProfilePicture" alt="Profil Resmi" class="form-control" style="width:100%; height:333px;">
                             </div>
                         </div>
                     </div>
