--- a/Core_Proje/Views/About/Index.cshtml
+++ b/Core_Proje/Views/About/Index.cshtml
@@ -19,7 +19,9 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail3">Açıklama</label>
-                    <input type="text" name="Description" class="form-control" value="@Model.Description">
+
+                    <textarea name="Description" class="form-control" style="height: 90px;">@Model.Description</textarea>
+
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail3">Yaş</label>
