--- a/Core_Proje/Views/Experience/EditExperience.cshtml
+++ b/Core_Proje/Views/Experience/EditExperience.cshtml
@@ -48,7 +48,9 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleSelectGender">Açıklama</label>
-                        <input type="text" class="form-control" name="Description" value="@Model.Description">
+                       
+                        <textarea name="Description" class="form-control" style="height: 90px;">@Model.Description</textarea>
+
 
                     </div>
 
