--- a/Core_Proje/Views/Contact/Index.cshtml
+++ b/Core_Proje/Views/Contact/Index.cshtml
@@ -20,7 +20,7 @@
                             <th>Gönderen</th>
                             <th>Mail</th>
                             <th>Tarih</th>
-                            <th></th>
+                            <th>Durum</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -28,11 +28,21 @@
                         @foreach (var item in Model)
                         {
                         <tr>
-                           
+
                             <td>@item.Name</td>
                             <td>@item.Mail</td>
                             <td>@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</td>
+                            <td>
+                                @if (item.Status == true)
+                                {
+                                    <div class="badge badge-outline-success"> Okundu </div>
+                                }
+                                else
+                                {
+                                    <div class="badge badge-outline-danger"> Okunmadı </div>
+                                }
 
+                            </td>
                             <td><a href="/Contact/ContactDetails/@item.MessageId" class="btn btn-warning">Mesajı Gör</a></td>
                             <td><a href="/Contact/DeleteContact/@item.MessageId" class="btn btn-danger">Mesajı Sil</a></td>
                         </tr>
