--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -58,7 +58,7 @@
             <span class="menu-icon">
                 <i class="mdi mdi-account"></i>
             </span>
-            <span class="menu-title">Hakkımnda</span>
+            <span class="menu-title">Hakkımda</span>
         </a>
     </li>
     <li class="nav-item menu-items">
