--- a/Core_Proje/Views/About/Index.cshtml
+++ b/Core_Proje/Views/About/Index.cshtml
@@ -13,39 +13,49 @@
 
 
                 @Html.HiddenFor(model => model.AboutId)
-                <div class="form-group">
-                    <label for="exampleInputName1">Başlık</label>
-                    <input type="text" name="Title" class="form-control" value="@Model.Title" />
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Açıklama</label>
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="form-group">
+                            <label for="exampleInputName1">Başlık</label>
+                            <input type="text" name="Title" class="form-control" value="@Model.Title" />
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Açıklama</label>
 
-                    <textarea name="Description" class="form-control" style="height: 90px;">@Model.Description</textarea>
+                            <textarea name="Description" class="form-control" style="height: 90px;">@Model.Description</textarea>
 
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Yaş</label>
-                    <input type="text" name="Age" class="form-control" value="@Model.Age">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Mail</label>
-                    <input type="text" name="Mail" class="form-control" value="@Model.Mail">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Telefon</label>
-                    <input type="text" name="Phone" class="form-control" value="@Model.Phone">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Adres</label>
-                    <input type="text" name="Address" class="form-control" value="@Model.Address">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">Resim</label>
-                    <br />
-                    <input type="file" name="Picture">
-                </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Yaş</label>
+                            <input type="text" name="Age" class="form-control" value="@Model.Age">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Mail</label>
+                            <input type="text" name="Mail" class="form-control" value="@Model.Mail">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Telefon</label>
+                            <input type="text" name="Phone" class="form-control" value="@Model.Phone">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Adres</label>
+                            <input type="text" name="Address" class="form-control" value="@Model.Address">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputEmail3">Resim</label>
+                            <br />
+                            <input type="file" name="Picture" class="form-control">
+                        </div>
 
-
+                    </div>
+                    <div class="col-md-3">
+                        <div class="form-group">
+                            <label for="ProfilePicture">Resim Önizleme</label>
+                            <br />
+                            <img src="/userimage/@Model.ImageUrl" id="ProfilePicture" alt="Profil Resmi" class="form-control" style="width:100%; height:333px;">
+                        </div>
+                    </div>
+                </div>
 
                 <button type="submit" class="btn btn-warning mr-2">Güncelle</button>
                 <a href="/Dashboard/Index" class="btn btn-danger">İptal</a>
