--- a/Core_Proje/Views/Default/SendMessage.cshtml
+++ b/Core_Proje/Views/Default/SendMessage.cshtml
@@ -3,7 +3,7 @@
 
 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="100">
     <div class="bg-light my-2 p-3 pt-2">
-        <form >
+        <form>
             <div class="form-group my-2">
                 <label for="name" class="form-label fw-bolder">Adınız</label>
                 <input class="form-control" type="text" id="inpname" name="Name" required>
@@ -21,3 +21,25 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+@section Scripts2
+{
+    <script>
+        $("#btnsend").click(function () {
+            let values = {
+                Name: $("#inpname").val(),
+                Mail: $("#inpemail").val(),
+                Content: $("#inpmessage").val()
+            };
+            $.ajax({
+                type: "Post",
+                url: "/Default/SendMessageAjax/",
+                data: values,
+                success: function (response) {
+                  
+                    alert("Mesaj başarıyla gönderildi");
+                }
+            });
+        });
+    </script>
+}
